// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "protobuf/raft/raft.proto";

package kvs;

option go_package = "github.com/mosuka/blast/protobuf/kvs";

service KVS {
    rpc Join (raft.JoinRequest) returns (google.protobuf.Empty) {}
    rpc Leave (raft.LeaveRequest) returns (google.protobuf.Empty) {}
    rpc Snapshot (google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Put (PutRequest) returns (google.protobuf.Empty) {}
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {}
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bytes value = 1;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message DeleteRequest {
    bytes key = 1;
}

message KeyValuePair {
    bytes key = 1;
    bytes value = 2;
}

message KVSCommand {
    string op = 1;
    bytes key = 2;
    bytes value = 3;
}
